--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite": "^5.3.0",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.33"
+    "postcss": "^8.4.33",
+    "@vitejs/plugin-react": "^4.3.1"
+
   }
 }
